style.css
/* ... */
.nav-list .item > a {
    padding: 0 10px;
}

.nav-list a:hover {
    text-decoration: none;
}

.nav-list .item.empty a {
    color: var(--color-warning-70);
}

.nav-list .item.active.empty a {
    background: var(--color-warning-50);
    color: var(--color-grey-90);
}

.nav-list .item.error a {
    color: var(--color-alert-50);
}

.nav-list .item.active.error a {
    background: var(--color-alert-50);
    color: var(--color-grey-10);
}

.nav-list .nav-header {
    padding: 0 10px;
    background: var(--color-grey-30);
    color: var(--color-grey-60);
    font-weight: bold;
}

.nav-list .nav-form {
    padding: 3px;
    text-align: center;
}

.nav-head {
    margin: 0;
    background: var(--color-grey-20);
    border-bottom: 1px solid var(--color-grey-30);
    text-align: right;
}

.nav-head .item {
    padding: 5px 10px;
    font-size: 0.9rem;
    line-height: 1.5rem;
}

/*=== Horizontal-list */
.horizontal-list {
    margin: 0;
    padding: 0;
}

.horizontal-list .item {
    vertical-align: middle;
}

#form-extension .horizontal-list,
.stat #form-delete .horizontal-list {
    margin-bottom: .5rem;
}

/*=== Dropdown */
.dropdown-menu {
    margin: 5px 0 0;
    padding: 5px 0;
    font-size: 0.8rem;
    background: var(--color-grey-10);
    border: 1px solid var(--color-grey-40);
    border-radius: 5px;
    box-shadow: 1px 1px 3px var(--color-grey-40);
    text-align: left;
}

.dropdown-menu::after {
    background: var(--color-grey-10);
    width: 10px;
    height: 10px;
    border-top: 1px solid var(--color-grey-40);
    border-left: 1px solid var(--color-grey-40);
    content: "";
    position: absolute;
    top: -6px;
    right: 13px;
    z-index: -10;
    transform: rotate(45deg);
}

.dropdown-header {
    margin-top: -5px;
    padding: .5rem 1rem;
    color: var(--color-grey-60);
    font-weight: bold;
    text-align: left;
}

.dropdown-menu > .item > a,
.dropdown-menu > .item > span,
.dropdown-menu > .item > .as-link {
    padding: 0 22px;
    line-height: 2.5em;
    font-size: 0.8rem;
}

.dropdown-menu > .item:hover {
    background: var(--color-primary-50);
    color: var(--color-grey-10);
}

.dropdown-menu > .item[aria-checked="true"] > a::before {
    font-weight: bold;
    margin: 0 0 0 -14px;
}

.dropdown-menu > .item:hover > a,
.dropdown-menu > .item:hover > .as-link {
    color: var(--color-grey-10);
    text-decoration: none;
}

.dropdown-menu .input select,
.dropdown-menu .input input {
    margin: 0 auto 5px;
    padding: 2px 5px;
    border-radius: 3px;
}

.separator {
    margin-top: 10px;
    margin-bottom: 5px;
    border-bottom: 1px solid var(--color-grey-30);
}

/*=== Alerts */
.alert {
    margin: 15px auto;
    padding: 10px 15px;
    background: var(--color-grey-10-darker);
    color: var(--color-grey-60);
    font-size: 0.9em;
    border: 1px solid var(--color-grey-20);
    border-right: 1px solid var(--color-grey-40);
    border-bottom: 1px solid var(--color-grey-40);
    border-radius: 5px;
}

.alert-head {
    font-size: 1.15em;
}

.alert > a {
    color: inherit;
    text-decoration: underline;
}

.alert-warn {
    background: var(--color-info-10);
    color: var(--color-info-90);
    border: 1px solid var(--color-info-50);
}

.alert-success {
    background: var(--color-primary-10);
    color: var(--color-primary-90);
    border: 1px solid var(--color-primary-50);
}

.alert-error {
    background: var(--color-alert-10);
    color: var(--color-alert-90);
    border: 1px solid var(--color-alert-50);
}

/*=== Pagination */
.pagination {
    background: var(--color-grey-10);
    text-align: center;
    color: var(--color-grey-60);
    font-size: 0.8em;
}

.content .pagination {
    margin: 0;
    padding: 0;
}

.pagination .item.pager-current {
    font-weight: bold;
    font-size: 1.5em;
}

.pagination .item a {
    display: block;
    color: var(--color-grey-60);
    font-style: italic;
    line-height: 3em;
    text-decoration: none;
}

.pagination .item a:hover {
    background: var(--color-grey-20);
}

.pagination:first-child .item {
    border-bottom: 1px solid var(--color-grey-40);
}

.pagination:last-child .item {
    border-top: 1px solid var(--color-grey-40);
}

.pagination .loading,
.pagination a:hover.loading {
    background: url("loader.gif") center center no-repeat var(--color-grey-10);
    font-size: 0;
}

/*=== Boxes */
.box {
    background: var(--color-grey-10);
    border: 1px solid var(--color-grey-30);
    border-radius: 5px;
    box-shadow: 0 0 2px var(--color-grey-30);
}

.box .box-title {
    margin: 0;
    padding: 5px 10px;
    background: var(--color-grey-20);
    border-bottom: 1px solid var(--color-grey-30);
    border-radius: 5px 5px 0 0;
}

.box .box-content {
    min-height: 2.5em;
    max-height: 260px;
}

.box .box-content .item {
    padding: 0 10px;
    font-size: 0.9rem;
    line-height: 2.5em;
}

.box .box-title .configure,
.box .box-content .item .configure {
    visibility: hidden;
}

.box .box-title:hover .configure,
.box .box-content .item:hover .configure {
    visibility: visible;
}

/*=== Tree */
.tree {
    margin: 10px 0;
}

.tree-folder-title {
    position: relative;
    padding: 0 10px;
    background: var(--color-grey-10);
    line-height: 2.5rem;
    font-size: 1rem;
}

.tree-folder-title .title {
    background: inherit;
    color: var(--color-grey-90);
}

.tree-folder-title .title:hover {
    text-decoration: none;
}

.tree-folder.active .tree-folder-title {
    background: var(--color-grey-20);
    font-weight: bold;
}

.tree-folder.active .tree-folder-title .title {
    color: var(--color-primary-50);
}

.tree-folder-items {
    box-shadow: 0 0 3px var(--color-grey-30) inset;
    border-top: 1px solid var(--color-grey-30);
    border-bottom: 1px solid var(--color-grey-30);
}

.tree-folder-items > .item {
    padding: 0 10px;
    line-height: 2.5rem;
    font-size: 0.8rem;
}

.tree-folder-items > .item.active {
    background: var(--color-primary-50);
}
/* ... */

